
7st November '99: wxWindows 2.1.11 released

There is still an unresolved problem with bitmap to image
conversion on big-endian architectures (such as Solaris),
where color values get exchanged. I'd need help on this
one as I have no BE computer.

Enlightment has struck the majority of the developers and
they have chosen to use the Linux kernel numbering scheme
for wxWindows from now on. This means that the next stable
release will be called wxWindows 2.2.X, development snapshots
will be called 2.1.X.

A lot of discussion has been wasted on how to maintain a
once released stable version. It was almost universally 
agreed that only a commercial entity will have the motivation 
($$$) to do that - so far there is no wxWindows Inc.

Support for GTK 1.0 has been dropped. This version has
been tested with GTK 1.2.3 and GTK 1.2.6 - it might
not work with some other versions.

Rewritten the support for multiple-format Drag'n'Drop and
clipboard under both GTK and MSW. There are probably some
problems here and there left.

wxListBox and wxChoice can now handle only either void 
client data (which it will not delete on destruction) or 
client data of the wxClientData type (which it will delete),
instead of both at the same time. The same will happen
to wxComboBox some time. Also, wxListBox can now sort its
items.

Many build fixes for various platforms have been applied,
try again, poor AIX, HP-UX and *BSD users, but don't reckon
with immediate success. Actually, when using GNU compilers,
your chances are quite good.

My rewrite of the wxWindows underlying GTK widget
has turned scrolling including subwindows from barely
functional to pretty and fast. I also added scrolling
of foreign windows to wxScrolledWindow.

Setting size hints for the window manager might work now.

wxSocket and Co. have been improved up to the point of
calling it a rewrite. It works on wxMSW now too and
seems pretty stable, but testing is still welcome.
